tests/functional/lang/parse-fail-eof-in-string.err.exp
error: syntax error, unexpected end of file, expecting '"'
       at /pwd/parse-fail-eof-in-string.nix:3:6:
            2| # Note that this file must not end with a newline.
            3| a 1"$
             |      ^
